# movsucator

./: .gitignore  CMakeLists.txt  README.md  build.sh  current_status.md  plan.txt
test/CodeGen/Movsucator/: CMakeLists.txt  arithmetic.ll  basic-mov.ll  controlflow.ll  frame-manager.ll  lit.local.cfg  logical.ll  memory.ll  shift.ll
test/simple/: test.c
